deploy/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp
  name: myapp
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      namespace: project
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: makartsewalex98/static-nginx:init
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: project
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    name: http-myapp
    targetPort: 80
